# BeamMP-Panel

./: .gitignore  BUILD.md  Cargo.toml  README.md  build.rs
icons/: BeamMP-Panel.icns  BeamMP-Panel.jxl
src/: config.rs  main.rs  mods.rs  process.rs  server.rs  settings.rs
src/ui/: config_tab.rs  control_tab.rs  mod.rs  mods_tab.rs  settings_tab.rs
wix/: main.wxs
