[package]
name = "beammp-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
directories = "5.0"
rfd = "0.15"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[profile.release]
opt-level = 3           # Maximum optimizations
lto = "thin"            # Link-time optimization
codegen-units = 1       # Better optimization, slower compile
strip = true            # Strip symbols from binary
panic = "abort"         # Smaller binary, no unwinding

[profile.release.package."*"]
opt-level = 3

